[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/levels/overworld.gd" type="Script" id=1]
[ext_resource path="res://assets/overworld/overworld_background.png" type="Texture" id=2]
[ext_resource path="res://assets/overworld/park_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/overworld/park_disabled.png" type="Texture" id=4]
[ext_resource path="res://assets/overworld/park_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/overworld/school_hover.png" type="Texture" id=6]
[ext_resource path="res://assets/overworld/school_disabled.png" type="Texture" id=7]
[ext_resource path="res://assets/overworld/school_normal.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/thaleah_fat.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/overworld/home_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/overworld/home_normal.png" type="Texture" id=11]
[ext_resource path="res://assets/overworld/home_disabled.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 9 )

[node name="Overworld" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parque" type="TextureButton" parent="ButtonsContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = -66.0
margin_right = 93.0
margin_bottom = -21.0
disabled = true
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Escola" type="TextureButton" parent="ButtonsContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -93.0
margin_top = -96.0
margin_right = -18.0
margin_bottom = -21.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Casa" type="TextureButton" parent="ButtonsContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.5
margin_top = 3.0
margin_right = 40.5
margin_bottom = 42.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 34.0
rect_min_size = Vector2( 80, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="LabelContainer"]
margin_right = 80.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Cidade"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentLocation" type="Label" parent="LabelContainer"]
margin_top = 19.0
margin_right = 80.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="on_tween_completed"]
